Revision history for Perl extension AnyEvent.

TODO: implement getprotobyname
        - AnyEvent::Handle will now call ->destroy on itself after
          executing the on_error callback, instead of doing some
          half-baked internal shutdown, for fatal errors.
        - clarify on_eof behaviour w.r.t. the read queue and
          on_read callbacks.
	- ignore some possible spurious wake-ups in tcp_connect.

4.82 Sat Jul 11 00:34:55 CEST 2009
	- POE and Event backends didn't accept some callable objects as 
          callbacks.
	- use Config module instead of POSIX module to detect signal names
          in AnyEvent::Strict and AnyEvent::Impl::EventLib, as the POSIX
          module doesn't even have all POSIX signals :/.
        - use more workarounds around the many refcnt/corruption bugs in
          Event::Lib.
        - work around a race condition in perl's select, causing t/03_child.t
          to rarely fail.

4.81 Thu Jul  9 10:30:30 CEST 2009
        - AnyEvent::Handle didn't properly diagnose write errors
          (it expected -1 from syswrite, how lame... :).
	- support file descriptors in addition to file handles
          in AnyEvent->io.
	- new env variables: PERL_ANYEVENT_RESOLV_CONF,
          PERL_ANYEVENT_MAX_OUTSTANDING_DNS, PERL_ANYEVENT_CA_FILE
          and PERL_ANYEVENT_CA_PATH.
        - provide a sensible synopsis section for AnyEvent::TLS.
        - add a "supported backends" section to the manpage.
        - added simple io watcher test to testsuite, using a
          portable_socketpair.
        - tried to improve the stability of the Event::Lib backend,
          YMMV.

4.8  Mon Jul  6 23:45:16 CEST 2009
	- AnyEvent::DNS did not properly follow CNAME records with
          uppercase targets.
        - AnyEvent::DNS would errornously return AAAA records
          with v4 mapped addresses (a faulty record) as ipv4 addresses,
          causing AnyEvent::Socket to throw an exception.